Successful version of most of fig 1, except for fig 1f

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -9,6 +9,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors\n",
+    "import matplotlib.cm as cm\n",
     "import matplotlib.image\n",
     "import matplotlib.gridspec as gridspec\n",
     "import h5py\n",
@@ -154,6 +155,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Randomly downsample (replace later)\n",
+    "summary_df = summary_df.sample(frac=0.1, random_state=2022)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,7 +238,7 @@
     "        'induction']).mean().xs( # Divide by the zero-induction, tandem case\n",
     "            df_1c['induction'].unique()[0], level='induction').xs(\n",
     "            'fig1.tandem_upstream', level='condition')['constant_mRNA']).reset_index()\n",
-    "df_1c_normed['norm_induction'] = df_1c_normed['induction'] / max(df_1c_normed['induction'])\n",
+    "df_1c_normed['norm_induction'] = df_1c_normed['induction'] / (1.0 / 120.0)\n",
     "# Tweak subplot layout\n",
     "fig1_subfigures['C'].subplots_adjust(left=0.175, bottom=0.225, right=0.9, top=0.8)\n",
     "fig_1c_axes = fig1_subfigures['C'].subplots(ncols=3, sharey=True)\n",
@@ -244,20 +255,22 @@
     "             legend=False, ax=fig_1c_axes[2])\n",
     "sns.despine(ax=fig_1c_axes[2])\n",
     "for ax in fig_1c_axes:\n",
-    "    ax.set_xlim([0.0, 1.0])\n",
+    "    ax.set_xlim([0.0, 2.5])\n",
+    "    ax.set_xticks([0.0, 1.0, 2.0])\n",
+    "    ax.set_xticklabels(['0x', '1x', '2x'])\n",
     "    ax.set_ylim([0.0, 1.4])\n",
     "# Set labels\n",
     "fig_1c_axes[0].set_ylabel('Reporter output')\n",
     "fig_1c_axes[0].set_xlabel('')\n",
-    "fig_1c_axes[1].set_xlabel('Induction')\n",
+    "fig_1c_axes[1].set_xlabel('Fold induction')\n",
     "fig_1c_axes[2].set_xlabel('')\n",
     "# Add annotations\n",
-    "fig1_subfigures['C'].text(0.5, 1.15, 'sc. independent', horizontalalignment='center', transform=fig_1c_axes[0].transAxes)\n",
-    "fig1_subfigures['C'].text(1.05, 1.15, 'sc. dependent', horizontalalignment='center', transform=fig_1c_axes[1].transAxes)\n",
+    "fig1_subfigures['C'].text(0.5, 1.15, 'sc. independent', horizontalalignment='center', transform=fig_1c_axes[0].transAxes, fontsize=9, fontweight='bold')\n",
+    "fig1_subfigures['C'].text(1.05, 1.15, 'sc. dependent', horizontalalignment='center', transform=fig_1c_axes[1].transAxes, fontsize=9, fontweight='bold')\n",
     "fig1_subfigures['C'].add_artist(matplotlib.lines.Line2D([0.505, 0.845], [0.87, 0.87], transform=fig1_subfigures['C'].transSubfigure, color='k'))\n",
-    "fig1_subfigures['C'].text(0.5, 1.0, 'f(1)', horizontalalignment='center', transform=fig_1c_axes[0].transAxes)\n",
-    "fig1_subfigures['C'].text(0.5, 1.0, 'f(σ)', horizontalalignment='center', transform=fig_1c_axes[1].transAxes)\n",
-    "fig1_subfigures['C'].text(0.5, 1.0, 'f(σ,σ²)', horizontalalignment='center', transform=fig_1c_axes[2].transAxes)\n",
+    "fig1_subfigures['C'].text(0.5, 1.0, 'f(1)', horizontalalignment='center', transform=fig_1c_axes[0].transAxes, fontsize=9)\n",
+    "fig1_subfigures['C'].text(0.5, 1.0, 'f(σ)', horizontalalignment='center', transform=fig_1c_axes[1].transAxes, fontsize=9)\n",
+    "fig1_subfigures['C'].text(0.5, 1.0, 'f(σ,σ²)', horizontalalignment='center', transform=fig_1c_axes[2].transAxes, fontsize=9)\n",
     "\n",
     "del df_1c\n",
     "fig1.savefig('test.svg')"
@@ -281,9 +294,9 @@
     "    )\n",
     "].copy()\n",
     "df_1d['condition'] = df_1d['condition'].cat.remove_unused_categories()\n",
-    "df_1d['norm_induction'] = df_1d['induction'] / max(df_1d['induction'])\n",
+    "df_1d['norm_induction'] = df_1d['induction'] / (1.0 / 120.0)\n",
     "df_1d['constant_mRNA'] = df_1d['constant_mRNA'] / 200.0\n",
-    "fig1_subfigures['D'].subplots_adjust(left=0.2, bottom=0.225, right=0.95, top=0.95)\n",
+    "fig1_subfigures['D'].subplots_adjust(left=0.2, bottom=0.225, right=0.95, top=0.90)\n",
     "fig_1d_axes = fig1_subfigures['D'].subplots(ncols=2, sharey=True)\n",
     "sns.lineplot(data=df_1d[df_1d['is_plasmid']==0.0],\n",
     "             x='norm_induction', y='constant_mRNA', hue='condition',\n",
@@ -295,12 +308,16 @@
     "             palette=fig1_palette, legend=False, linewidth=2,\n",
     "             ax=fig_1d_axes[1])\n",
     "sns.despine(ax=fig_1d_axes[1])\n",
-    "fig_1d_axes[0].set_xlabel('')\n",
-    "fig_1d_axes[1].set_xlabel('')\n",
+    "for ax in fig_1d_axes:\n",
+    "    ax.set_xlabel('')\n",
+    "    ax.set_xlim([0.0, 2.5])\n",
+    "    ax.set_xticks([0.0, 1.0, 2.0])\n",
+    "    ax.set_xticklabels(['0x', '1x', '2x'])\n",
+    "    ax.set_ylim([0.0, 1.2])\n",
     "fig_1d_axes[0].set_ylabel('Reporter output')\n",
-    "fig1_subfigures['D'].text(0.5, 0.01, 'Induction')\n",
-    "fig1_subfigures['D'].text(0.5, 0.9, 'Linear', horizontalalignment='center', transform=fig_1d_axes[0].transAxes)\n",
-    "fig1_subfigures['D'].text(0.5, 0.9, 'Circular', horizontalalignment='center', transform=fig_1d_axes[1].transAxes)\n",
+    "fig1_subfigures['D'].text(0.5, 0.01, 'Fold induction')\n",
+    "fig1_subfigures['D'].text(0.5, 1.0, 'Linear', horizontalalignment='center', transform=fig_1d_axes[0].transAxes, fontsize=9, fontweight='bold')\n",
+    "fig1_subfigures['D'].text(0.5, 1.0, 'Circular', horizontalalignment='center', transform=fig_1d_axes[1].transAxes, fontsize=9, fontweight='bold')\n",
     "\n",
     "fig1.savefig('test.svg')"
    ]
@@ -326,34 +343,43 @@
     "        (np.abs(summary_df['coeff.sigma_squared'] - 0.0316) < 0.001)\n",
     "    )\n",
     "].copy()\n",
+    "df_1e['norm_reporter']  = df_1e['constant_mRNA'] / 258.0\n",
+    "df_1e['norm_inducible'] = df_1e['inducible_mRNA'] / 258.0\n",
+    "fig1_subfigures['E'].subplots_adjust(left=0.175, bottom=0.25, right=0.9, top=0.65)\n",
     "fig_1e_axes = fig1_subfigures['E'].subplots(ncols=3, sharey=True)\n",
     "sns.kdeplot(data=df_1e[df_1e['condition'] == 'fig1.tandem_upstream'],\n",
-    "            x='inducible_mRNA', y='constant_mRNA', color=main_palette['tandem'],\n",
+    "            x='norm_inducible', y='norm_reporter', color=main_palette['tandem'],\n",
     "            ax=fig_1e_axes[0])\n",
     "sns.despine(ax=fig_1e_axes[0])\n",
     "sns.kdeplot(data=df_1e[df_1e['condition'] == 'fig1.convergent'],\n",
-    "            x='inducible_mRNA', y='constant_mRNA', color=main_palette['convergent'],\n",
+    "            x='norm_inducible', y='norm_reporter', color=main_palette['convergent'],\n",
     "            ax=fig_1e_axes[1])\n",
     "sns.despine(ax=fig_1e_axes[1])\n",
     "sns.kdeplot(data=df_1e[df_1e['condition'] == 'fig1.divergent'],\n",
-    "            x='inducible_mRNA', y='constant_mRNA', color=main_palette['divergent'],\n",
+    "            x='norm_inducible', y='norm_reporter', color=main_palette['divergent'],\n",
     "            ax=fig_1e_axes[2])\n",
     "sns.despine(ax=fig_1e_axes[2])\n",
+    "for ax in fig_1e_axes:\n",
+    "    ax.set_xlim([0.0, 1.0])\n",
+    "    ax.set_ylim([0.0, 1.0])\n",
+    "    ax.set_xticks([0.0, 1.0])\n",
+    "    ax.set_yticks([0.0, 1.0])\n",
     "\n",
     "fig_1e_axes[0].set_ylabel('Reporter output')\n",
     "fig_1e_axes[0].set_xlabel('')\n",
     "fig_1e_axes[1].set_xlabel('Inducible gene output')\n",
     "fig_1e_axes[2].set_xlabel('')\n",
+    "\n",
+    "#fig_1e_axes[0].arrow(0.3, 0.7, -0.2, 0.2)\n",
+    "#fig_1e_axes[0].arrow(0.3, 0.7,  0.2, 0.2)\n",
+    "fig_1e_axes[0].annotate(text='', xytext=(0.405, 0.595), xy=(0.2, 0.8), arrowprops={'facecolor': 'black', 'edgecolor': '#000000ff', 'width': 0.8, 'headwidth': 5.0, 'headlength': 5.0, 'shrink': 0.0, 'capstyle': 'round'})\n",
+    "fig_1e_axes[0].annotate(text='', xytext=(0.395, 0.595), xy=(0.6, 0.8), arrowprops={'facecolor': 'black', 'edgecolor': '#000000ff', 'width': 0.8, 'headwidth': 5.0, 'headlength': 5.0, 'shrink': 0.0, 'capstyle': 'round'})\n",
+    "fig_1e_axes[0].text(0.2, 0.84, 'int.', horizontalalignment='center', transform=fig_1e_axes[0].transData, fontsize=9, fontstyle='italic')\n",
+    "fig_1e_axes[0].text(0.6, 0.84, 'ext.', horizontalalignment='center', transform=fig_1e_axes[0].transData, fontsize=9, fontstyle='italic')\n",
+    "fig1_subfigures['E'].text(0.4, 1.00, 'noise', horizontalalignment='center', transform=fig_1e_axes[0].transData, fontsize=9, fontstyle='italic')\n",
+    "for header, ax in zip(['Tandem', 'Convergent', 'Divergent'], fig_1e_axes):\n",
+    "    fig1_subfigures['E'].text(0.5, 1.2, header, horizontalalignment='center', transform=ax.transAxes, fontsize=9, fontweight='bold')\n",
     "fig1.savefig('test.svg')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig1.savefig('test.svg')"
    ]
   },
   {
@@ -375,14 +401,53 @@
     "        (summary_df['coeff.sigma_squared'] == 0.02)\n",
     "    )\n",
     "].copy()\n",
-    "fig_1f_axes = fig1_subfigures['F'].subplots(ncols=3, sharey=True)\n",
+    "df_1f['norm_induction'] = df_1f['induction'] / (1.0 / 120.0)\n",
+    "df_1f['norm_reporter']  = df_1f['constant_mRNA'] / 300.0\n",
+    "df_1f['condition'] = df_1f['condition'].cat.remove_unused_categories()\n",
+    "fig1_subfigures['F'].subplots_adjust(left=0.175, bottom=0.25, right=0.75, top=0.65)\n",
+    "fig_1f_axes = fig1_subfigures['F'].subplots(ncols=4, gridspec_kw={'width_ratios':[1,1,1,0.3]})\n",
     "for condition, ax in zip(['fig1f.spacing.tandem_upstream', 'fig1f.spacing.convergent', 'fig1f.spacing.divergent'], fig_1f_axes):\n",
-    "    sns.lineplot(data=df_1f[df_1f['condition']==condition], x='induction', y='constant_mRNA', hue='spacing',\n",
+    "    sns.lineplot(data=df_1f[df_1f['condition']==condition], x='norm_induction', y='norm_reporter', hue='spacing',\n",
     "        palette='viridis', hue_norm=matplotlib.colors.Normalize(vmin=500, vmax=12000),\n",
     "        legend=False, ax=ax)\n",
     "    ax.set_facecolor(light_palette[condition.replace('_','.').split('.')[2]])\n",
     "    sns.despine(ax=ax)\n",
+    "# Add colorbar\n",
+    "fig1_subfigures['F'].colorbar(cm.ScalarMappable(norm=matplotlib.colors.Normalize(vmin=500, vmax=12000), cmap='viridis'), cax=fig_1f_axes[3])\n",
+    "for ax in fig_1f_axes[:3]:\n",
+    "    ax.set_xlim([0.0, 1.0])\n",
+    "fig_1f_axes[0].set_ylabel('Reporter output')\n",
+    "fig_1f_axes[0].set_xlabel('')\n",
+    "fig_1f_axes[1].set_xlabel('Fold induction')\n",
+    "fig_1f_axes[2].set_xlabel('')\n",
     "fig1.savefig('test.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1f.groupby(['condition', 'norm_induction', 'spacing']).median()['norm_reporter']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1f.groupby(['condition', 'norm_induction', 'spacing']).max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1f.groupby(['condition', 'norm_induction', 'spacing'])['norm_reporter'].transform(lambda x: x)"
    ]
   },
   {
@@ -393,10 +458,6 @@
    "source": [
     "add_external_svgs('test_compose.svg', 'test.svg', fig1_subfigures, {\n",
     "    'A': {\n",
-    "        'filename': '../writeups/figures/modeling_paper/fig_1a.svg',\n",
-    "        'extents': (0.05, 0.05, 0.9, 0.9)\n",
-    "    },\n",
-    "    'E': {\n",
     "        'filename': '../writeups/figures/modeling_paper/fig_1a.svg',\n",
     "        'extents': (0.05, 0.05, 0.9, 0.9)\n",
     "    },\n",
