Updated groupby magic

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -429,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1f.groupby(['condition', 'norm_induction', 'spacing']).median()['norm_reporter']"
+    "max_spacing_median = df_1f.groupby(['condition', 'norm_induction', 'spacing']).median()['norm_reporter'].xs(10000, level='spacing')"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1f.groupby(['condition', 'norm_induction', 'spacing']).max()"
+    "max_spacing_median.index[0]"
    ]
   },
   {
@@ -447,7 +447,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1f.groupby(['condition', 'norm_induction', 'spacing'])['norm_reporter'].transform(lambda x: x)"
+    "df_1f.groupby(['condition', 'norm_induction', 'spacing'])['norm_reporter'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1f.groupby(['condition', 'norm_induction', 'spacing'])['norm_reporter'].transform(lambda col: col - max_spacing_median.xs(col.index[0][0], level='condition').xs(col.index[0][1], level='norm_induction'))"
    ]
   },
   {
