Finalized first draft of fig1, first fig 2 plots

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -16,6 +16,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import svgutils.transform as sg\n",
+    "import scipy.signal\n",
     "\n",
     "from pathlib import Path\n",
     "import re\n",
@@ -161,7 +162,7 @@
    "outputs": [],
    "source": [
     "# Randomly downsample (replace later)\n",
-    "summary_df = summary_df.sample(frac=0.1, random_state=2022)"
+    "#summary_df = summary_df.sample(frac=0.1, random_state=2022)"
    ]
   },
   {
@@ -271,9 +272,7 @@
     "fig1_subfigures['C'].text(0.5, 1.0, 'f(1)', horizontalalignment='center', transform=fig_1c_axes[0].transAxes, fontsize=9)\n",
     "fig1_subfigures['C'].text(0.5, 1.0, 'f(σ)', horizontalalignment='center', transform=fig_1c_axes[1].transAxes, fontsize=9)\n",
     "fig1_subfigures['C'].text(0.5, 1.0, 'f(σ,σ²)', horizontalalignment='center', transform=fig_1c_axes[2].transAxes, fontsize=9)\n",
-    "\n",
-    "del df_1c\n",
-    "fig1.savefig('test.svg')"
+    "del df_1c"
    ]
   },
   {
@@ -319,7 +318,7 @@
     "fig1_subfigures['D'].text(0.5, 1.0, 'Linear', horizontalalignment='center', transform=fig_1d_axes[0].transAxes, fontsize=9, fontweight='bold')\n",
     "fig1_subfigures['D'].text(0.5, 1.0, 'Circular', horizontalalignment='center', transform=fig_1d_axes[1].transAxes, fontsize=9, fontweight='bold')\n",
     "\n",
-    "fig1.savefig('test.svg')"
+    "del df_1d"
    ]
   },
   {
@@ -368,6 +367,7 @@
     "fig_1e_axes[0].set_ylabel('Reporter output')\n",
     "fig_1e_axes[0].set_xlabel('')\n",
     "fig_1e_axes[1].set_xlabel('Inducible gene output')\n",
+    "fig_1e_axes[1].set_ylabel('')\n",
     "fig_1e_axes[2].set_xlabel('')\n",
     "\n",
     "#fig_1e_axes[0].arrow(0.3, 0.7, -0.2, 0.2)\n",
@@ -379,7 +379,8 @@
     "fig1_subfigures['E'].text(0.4, 1.00, 'noise', horizontalalignment='center', transform=fig_1e_axes[0].transData, fontsize=9, fontstyle='italic')\n",
     "for header, ax in zip(['Tandem', 'Convergent', 'Divergent'], fig_1e_axes):\n",
     "    fig1_subfigures['E'].text(0.5, 1.2, header, horizontalalignment='center', transform=ax.transAxes, fontsize=9, fontweight='bold')\n",
-    "fig1.savefig('test.svg')\n"
+    "\n",
+    "del df_1e\n"
    ]
   },
   {
@@ -404,23 +405,29 @@
     "df_1f['norm_induction'] = df_1f['induction'] / (1.0 / 120.0)\n",
     "df_1f['norm_reporter']  = df_1f['constant_mRNA'] / 300.0\n",
     "df_1f['condition'] = df_1f['condition'].cat.remove_unused_categories()\n",
+    "df_1f['delta_reporter'] = df_1f.groupby(['condition', 'norm_induction', 'spacing'])['norm_reporter'].transform(lambda col: col - max_spacing_median.xs(col.name[0], level='condition').xs(col.name[1]))\n",
     "fig1_subfigures['F'].subplots_adjust(left=0.175, bottom=0.25, right=0.75, top=0.65)\n",
-    "fig_1f_axes = fig1_subfigures['F'].subplots(ncols=4, gridspec_kw={'width_ratios':[1,1,1,0.3]})\n",
+    "fig_1f_axes = fig1_subfigures['F'].subplots(ncols=4, sharey=True, gridspec_kw={'width_ratios':[1,1,1,0.3]})\n",
+    "# Break the share on the fourth axis\n",
+    "fig_1f_axes[0].get_shared_y_axes().remove(fig_1f_axes[3])\n",
     "for condition, ax in zip(['fig1f.spacing.tandem_upstream', 'fig1f.spacing.convergent', 'fig1f.spacing.divergent'], fig_1f_axes):\n",
-    "    sns.lineplot(data=df_1f[df_1f['condition']==condition], x='norm_induction', y='norm_reporter', hue='spacing',\n",
+    "    sns.lineplot(data=df_1f[df_1f['condition']==condition], x='norm_induction', y='delta_reporter', hue='spacing',\n",
     "        palette='viridis', hue_norm=matplotlib.colors.Normalize(vmin=500, vmax=12000),\n",
     "        legend=False, ax=ax)\n",
     "    ax.set_facecolor(light_palette[condition.replace('_','.').split('.')[2]])\n",
     "    sns.despine(ax=ax)\n",
     "# Add colorbar\n",
     "fig1_subfigures['F'].colorbar(cm.ScalarMappable(norm=matplotlib.colors.Normalize(vmin=500, vmax=12000), cmap='viridis'), cax=fig_1f_axes[3])\n",
-    "for ax in fig_1f_axes[:3]:\n",
-    "    ax.set_xlim([0.0, 1.0])\n",
-    "fig_1f_axes[0].set_ylabel('Reporter output')\n",
+    "for header, ax in zip(['Tandem', 'Convergent', 'Divergent'], fig_1f_axes[:3]):\n",
+    "    ax.set_xlim([0.0, 2.0])\n",
+    "    ax.set_ylim([-0.4,0.4])\n",
+    "    fig1_subfigures['F'].text(0.5, 1.2, header, horizontalalignment='center', transform=ax.transAxes, fontsize=8, fontweight='bold')\n",
+    "fig_1f_axes[0].set_ylabel('ΔReporter output')\n",
     "fig_1f_axes[0].set_xlabel('')\n",
     "fig_1f_axes[1].set_xlabel('Fold induction')\n",
     "fig_1f_axes[2].set_xlabel('')\n",
-    "fig1.savefig('test.svg')"
+    "\n",
+    "del df_1f"
    ]
   },
   {
@@ -429,43 +436,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_spacing_median = df_1f.groupby(['condition', 'norm_induction', 'spacing']).median()['norm_reporter'].xs(10000, level='spacing')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_spacing_median.index[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1f.groupby(['condition', 'norm_induction', 'spacing'])['norm_reporter'].max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1f.groupby(['condition', 'norm_induction', 'spacing'])['norm_reporter'].transform(lambda col: col - max_spacing_median.xs(col.index[0][0], level='condition').xs(col.index[0][1], level='norm_induction'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_external_svgs('test_compose.svg', 'test.svg', fig1_subfigures, {\n",
+    "fig1.savefig('../writeups/figures/modeling_paper/fig_1_mpl.svg')\n",
+    "add_external_svgs('../writeups/figures/modeling_paper/fig_1.svg', '../writeups/figures/modeling_paper/fig_1_mpl.svg', fig1_subfigures, {\n",
     "    'A': {\n",
     "        'filename': '../writeups/figures/modeling_paper/fig_1a.svg',\n",
     "        'extents': (0.05, 0.05, 0.9, 0.9)\n",
@@ -483,12 +455,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "svg_fig1 = sg.fromfile('test.svg')\n",
-    "svg_fig1.append([\n",
-    "    sg.fromfile('../writeups/figures/modeling_paper/fig_1a.svg').getroot(),\n",
-    "    sg.fromfile('../writeups/figures/modeling_paper/fig_1b.svg').getroot()\n",
-    "    ])\n",
-    "svg_fig1.save('test_compose.svg')"
+    "del summary_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figure 2"
    ]
   },
   {
@@ -497,11 +471,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "svgutils.compose.Figure(\"160mm\", \"130mm\",\n",
-    "    svgutils.compose.Panel(svgutils.compose.MplFigure(fig1)),\n",
-    "    svgutils.compose.Panel(svgutils.compose.SVG('../writeups/figures/modeling_paper/fig_1a.svg')),\n",
-    "    svgutils.compose.Panel(svgutils.compose.SVG('../writeups/figures/modeling_paper/fig_1b.svg')),\n",
-    "    ).save('test_compose.svg')"
+    "if (datadir/'projects'/'tangles'/'simulations'/'fig2_reprocessed.gzip').exists():\n",
+    "    fig2_df = pd.read_parquet(datadir/'projects'/'tangles'/'simulations'/'fig2_reprocessed.gzip')\n",
+    "    print(f'Loaded {len(fig2_df)} total datapoints from Parquet cached file')\n",
+    "else:\n",
+    "    with h5py.File(\n",
+    "        datadir/'projects'/'tangles'/'simulations'/'modeling_fig2_combined.h5', 'r') as fig2_raw:\n",
+    "        fig2_df = []\n",
+    "        i = 0\n",
+    "        for group in fig2_raw.keys():\n",
+    "            group_df = []\n",
+    "            for run in fig2_raw[group].values():\n",
+    "                run_shape = run['mRNA'].shape\n",
+    "                for subrun in range(run_shape[2]):\n",
+    "                    inducible = run['mRNA'][:,0,:]\n",
+    "                    constant  = run['mRNA'][:,1,:]\n",
+    "                    group_df.append(pd.DataFrame(data={\n",
+    "                        'inducible_mRNA': inducible[:,subrun],\n",
+    "                        'constant_mRNA':  constant[:,subrun],\n",
+    "                        'time': run['time']}))\n",
+    "                    group_df[-1]['induction'] = run.attrs['step_induction']\n",
+    "                    group_df[-1]['condition'] = run.attrs['comment'].decode('utf-8')\n",
+    "                    group_df[-1]['idx'] = i\n",
+    "                    i += 1\n",
+    "                    gene_endpoints = sorted(np.concatenate((\n",
+    "                        run.attrs['gene.start'],\n",
+    "                        run.attrs['gene.end'])))\n",
+    "                    group_df[-1]['spacing'] = int((gene_endpoints[2] - gene_endpoints[1]) / 0.34)\n",
+    "                    for term in [\n",
+    "                        'step_time', 'coeff.sigma_squared',]:\n",
+    "                        group_df[-1][term] = run.attrs[term]\n",
+    "            fig2_df.append(pd.concat(group_df, ignore_index=True))\n",
+    "            print(f'Loaded {len(fig2_df[-1])} datapoints...')\n",
+    "        fig2_df = pd.concat(fig2_df, ignore_index=True)\n",
+    "        print(f'Loaded {len(fig2_df)} total datapoints!')\n",
+    "        fig2_df.to_parquet(datadir/'projects'/'tangles'/'simulations'/'fig2_reprocessed.gzip', compression='gzip')"
    ]
   },
   {
@@ -510,7 +514,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Path('../writeups/figures/modeling_paper/fig_1b.svg').exists()"
+    "fig2_df['induction'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For fig2b, find three single runs (tandem, convergent, divergent) at maximum induction\n",
+    "run_ids = {condition: fig2_df[\n",
+    "    (fig2_df['condition']==condition)\n",
+    "    & (np.abs(fig2_df['induction'] - 1.0) < 0.01)\n",
+    "    & (fig2_df['coeff.sigma_squared'] == 0.02)]['idx'].iloc[0] for condition in fig2_df['condition'].unique()}\n",
+    "print(run_ids)\n",
+    "for cond, id in run_ids.items():\n",
+    "    run = fig2_df[fig2_df.idx == id]\n",
+    "    plt.plot(run['time'], run['constant_mRNA'], label=cond+':reporter')\n",
+    "    plt.plot(run['time'], run['inducible_mRNA'], ':', label=cond+':inducible')\n",
+    "    plt.legend()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig2c_df = fig2_df[\n",
+    "    (fig2_df['coeff.sigma_squared'] == 0.02) &\n",
+    "    (np.abs(fig2_df['induction'] - 1.0) < 0.01)\n",
+    "].copy()\n",
+    "fig2c_std = fig2c_df.groupby(['condition', 'time']).std().reset_index()\n",
+    "fig2c_mean = fig2c_df.groupby(['condition', 'time']).mean().reset_index()\n",
+    "sns.lineplot(data=fig2c_std, x='time', y='constant_mRNA', hue='condition', estimator=None)\n",
+    "plt.show()\n",
+    "sns.lineplot(data=fig2c_mean, x='time', y='inducible_mRNA', hue='condition', estimator=None)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate average convolution\n",
+    "def df_convolve_2e(df):\n",
+    "    constant_normed  = (df['constant_mRNA'] - df['constant_mRNA'].mean())\n",
+    "    inducible_normed = (df['inducible_mRNA'] - df['inducible_mRNA'].mean())\n",
+    "    return scipy.signal.convolve(constant_normed, inducible_normed)\n",
+    "fig2_convolutions = fig2_df[\n",
+    "    (fig2_df.time > 15000)\n",
+    "    & (fig2_df.induction == 1.0)\n",
+    "    & (fig2_df['coeff.sigma_squared'] == 0.02)].groupby([\n",
+    "        'condition', 'coeff.sigma_squared', 'induction', 'idx'\n",
+    "    ]).apply(df_convolve_2e).reset_index().groupby([\n",
+    "        'condition', 'induction', 'coeff.sigma_squared'\n",
+    "    ]).apply(lambda df: np.vstack(df[0]).mean(axis=0)).reset_index()\n",
+    "for condition in ['fig2.convergent']:\n",
+    "    entry = fig2_convolutions[(fig2_convolutions.condition == condition)]\n",
+    "    convolution = entry[0].iloc[0]\n",
+    "    plt.axhline(y=0, color='k')\n",
+    "    plt.axvline(x=0, color='#888888', linestyle=':')\n",
+    "    plt.plot(np.array(range(len(convolution))) - (len(convolution) / 2.0), convolution, label=condition)\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "plt.axhline(y=0, color='k')\n",
+    "plt.axvline(x=0, color='#888888', linestyle=':')\n",
+    "for condition in ['fig2.divergent', 'fig2.tandem_up', 'fig2.tandem_down']:\n",
+    "    entry = fig2_convolutions[(fig2_convolutions.condition == condition)]\n",
+    "    convolution = entry[0].iloc[0]\n",
+    "    plt.plot(np.array(range(len(convolution))) - (len(convolution) / 2.0), convolution, label=condition)\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -564,15 +643,6 @@
     "- **Panel E**: Three subplots. These are scatterplots (density plots?) of the three conditions (at full induction) that show the noise behavior of the system. Added on is a schematic reminding \n",
     "\n",
     "### Caption"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig2 = plt.figure(figsize=)"
    ]
   },
   {
