--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -597,8 +597,8 @@
     "    run['normed_constant'] = run['constant_mRNA'] / 380\n",
     "    run['normed_inducible']= run['inducible_mRNA'] / 380\n",
     "    ax.axvspan(10000, max(run['time']), color=fig2_palette['background_gray'])\n",
-    "    sns.lineplot(data=run, x='time', y='normed_constant', color=fig2_palette[cond], linewidth=2, legend=False, ax=ax)\n",
-    "    sns.lineplot(data=run, x='time', y='normed_inducible', color=fig2_palette['gray'], linewidth=2, legend=False, ax=ax)\n",
+    "    sns.lineplot(data=run, x='time', y='normed_constant', color=fig2_palette[cond], linewidth=1, legend=False, ax=ax)\n",
+    "    sns.lineplot(data=run, x='time', y='normed_inducible', color=fig2_palette['gray'], linewidth=1, legend=False, ax=ax)\n",
     "    sns.despine(ax=ax)\n",
     "    ax.set_xlabel('')\n",
     "    ax.set_ylabel('')\n",
@@ -650,7 +650,7 @@
     "fig_2b_ax = fig2_subfigures['B'].subplots(ncols=1)\n",
     "fig_2b_ax.axvspan(10000, max(fig2b_df['time']), color=fig2_palette['background_gray'])\n",
     "sns.lineplot(data=fig2b_std, x='time', y='normed_constant', hue='condition',\n",
-    "    palette=fig2_palette, estimator=None, ax=fig_2b_ax, legend=None)\n",
+    "    palette=fig2_palette, linewidth=1, estimator=None, ax=fig_2b_ax, legend=None)\n",
     "fig_2b_ax.axhline(y=pre_induction_noise, color=fig2_palette['gray'], linestyle=':')\n",
     "sns.despine(ax=fig_2b_ax)\n",
     "fig_2b_ax.set_ylabel('Standard deviation')\n",
@@ -747,7 +747,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig1.savefig('../writeups/figures/modeling_paper/fig_2_mpl.svg')"
+    "fig2.savefig('../writeups/figures/modeling_paper/fig_2_mpl.svg')"
    ]
   },
   {
@@ -765,9 +765,46 @@
    "source": [
     "if (datadir/'projects'/'tangles'/'simulations'/'fig4_examples.gzip').exists():\n",
     "    fig4_examples = pd.read_parquet(datadir/'projects'/'tangles'/'simulations'/'fig4_examples.gzip')\n",
-    "    print(f'Loaded {len(fig4_examples)} total datapoints from Parquet cached file')\n",
+    "    print(f'Loaded {len(fig4_examples)} total example datapoints from Parquet cached file')\n",
     "else:\n",
-    "    pass\n",
+    "    with h5py.File(\n",
+    "        datadir/'projects'/'tangles'/'simulations'/'modeling_fig4_combined.h5', 'r') as fig4_raw:\n",
+    "        n_examples = 5\n",
+    "        example_counts = {}\n",
+    "        fig4_examples = []\n",
+    "        i = 1\n",
+    "        for group in fig4_raw.keys():\n",
+    "            for run in fig4_raw[group].values():\n",
+    "                run_shape = run['mRNA'].shape\n",
+    "                condition = run.attrs['comment'].decode('utf-8')\n",
+    "                temperature = run.attrs['temperature']\n",
+    "                c_tup = (condition, temperature)\n",
+    "                if c_tup not in example_counts or example_counts[c_tup] < n_examples:\n",
+    "                    fig4_examples.append(pd.DataFrame(data={\n",
+    "                        'condition': condition,\n",
+    "                        'temperature': temperature,\n",
+    "                        'time': run['time'],\n",
+    "                        'her1_mRNA': run['mRNA'][:,0,0],\n",
+    "                        'her7_mRNA': run['mRNA'][:,1,0],\n",
+    "                        'her1_protein': run['discrete_components'][:,0,0],\n",
+    "                        'her7_protein': run['discrete_components'][:,1,0],\n",
+    "                        'hes6_protein': run['discrete_components'][:,2,0],\n",
+    "                        'her1_promoter_empty': run['discrete_components'][:,3,0],\n",
+    "                        'her7_promoter_empty': run['discrete_components'][:,4,0],\n",
+    "                        'her1_promoter_with_11': run['discrete_components'][:,5,0],\n",
+    "                        'her1_promoter_with_76': run['discrete_components'][:,6,0],\n",
+    "                        'her7_promoter_with_11': run['discrete_components'][:,7,0],\n",
+    "                        'her7_promoter_with_76': run['discrete_components'][:,8,0],\n",
+    "                        'idx': i\n",
+    "                    }))\n",
+    "                    i += 1\n",
+    "                    if c_tup not in example_counts:\n",
+    "                        example_counts[c_tup] = 1\n",
+    "                    else:\n",
+    "                        example_counts[c_tup] += 1\n",
+    "        fig4_examples = pd.concat(fig4_examples)\n",
+    "        print(f'Loaded {len(fig4_examples)} example datapoints!')\n",
+    "        fig4_examples.to_parquet(datadir/'projects'/'tangles'/'simulations'/'fig4_examples.gzip', compression='gzip')\n",
     "if (datadir/'projects'/'tangles'/'simulations'/'fig4_summaries.gzip').exists():\n",
     "    fig4_df = pd.read_parquet(datadir/'projects'/'tangles'/'simulations'/'fig4_summaries.gzip')\n",
     "    print(f'Loaded {len(fig4_df)} simulation runs from Parquet cached file')\n",
@@ -784,11 +821,16 @@
     "            for run in fig4_raw[group].values():\n",
     "                run_shape = run['mRNA'].shape\n",
     "                for subrun in range(run_shape[2]):\n",
+    "                    time = run['time'][:]\n",
+    "                    # Perform correlation after \"burn-in\" time\n",
+    "                    # of 10000 seconds\n",
     "                    her1 = run['mRNA'][:,0,subrun]\n",
     "                    her7 = run['mRNA'][:,1,subrun]\n",
-    "                    mc_her1 = her1 - np.mean(her1)\n",
-    "                    mc_her7 = her7 - np.mean(her7)\n",
-    "                    sc, _ = scipy.stats.spearmanr(her1, her7)\n",
+    "                    her1_trimmed = her1[time > 10000]\n",
+    "                    her7_trimmed = her7[time > 10000]\n",
+    "                    mc_her1 = her1_trimmed - np.mean(her1_trimmed)\n",
+    "                    mc_her7 = her7_trimmed - np.mean(her7_trimmed)\n",
+    "                    sc, _ = scipy.stats.spearmanr(her1_trimmed, her7_trimmed)\n",
     "                    cross_corr = scipy.signal.correlate(mc_her1, mc_her7)\n",
     "                    autocorr_correction = np.sqrt(\n",
     "                        scipy.signal.correlate(mc_her1, mc_her1, mode='valid')[0] * \n",
@@ -796,10 +838,10 @@
     "                    group_df.append(pd.DataFrame(data={\n",
     "                        'spearman_corr': sc,\n",
     "                        'cross_corr': (cross_corr,),\n",
-    "                        'autocorr_correction': autocorr_correction}))\n",
-    "                    group_df[-1]['condition'] = run.attrs['comment'].decode('utf-8')\n",
-    "                    # Save temperature: we can't do it now :(\n",
-    "                    group_df[-1]['idx'] = i\n",
+    "                        'autocorr_correction': autocorr_correction,\n",
+    "                        'condition': run.attrs['comment'].decode('utf-8'),\n",
+    "                        'temperature': run.attrs['temperature'],\n",
+    "                        'idx': i}))\n",
     "                    i += 1\n",
     "            fig4_df.append(pd.concat(group_df, ignore_index=True))\n",
     "            print(f'Loaded {len(fig4_df[-1])} simulations...')\n",
@@ -814,7 +856,137 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scipy.signal.correlate([1,2,3],[4,5,6], mode='valid')"
+    "# Create the overall figure, gridspec, and add subfigure labels.\n",
+    "fig4 = plt.figure(figsize=(6.2,5.12))\n",
+    "fig4_gridspec = gridspec.GridSpec(3, 2, figure=fig4,\n",
+    "    wspace=0.1, hspace=0.1)\n",
+    "fig4_subfigures = {\n",
+    "    'A': fig4.add_subfigure(fig4_gridspec[0,0]),\n",
+    "    'B': fig4.add_subfigure(fig4_gridspec[0,1]),\n",
+    "    'C': fig4.add_subfigure(fig4_gridspec[1,:]),\n",
+    "    'D': fig4.add_subfigure(fig4_gridspec[2,0]),\n",
+    "    'E': fig4.add_subfigure(fig4_gridspec[2,1])\n",
+    "}\n",
+    "for label, subfig in fig4_subfigures.items():\n",
+    "    subfig.add_artist(matplotlib.text.Text(x=0, y=1, text=f'{label}.', fontsize=13, fontweight='bold', verticalalignment='top',transform=subfig.transSubfigure))\n",
+    "fig4_palette = {\n",
+    "    'her1': '#5254a3',\n",
+    "    'her7': '#9c9ede',\n",
+    "    'fig4.uncoupled': '#b5cf6b',\n",
+    "    'fig4.fully-coupled': '#637939',\n",
+    "    'fig4.tangles-coupled': main_palette['divergent'],\n",
+    "    'gray': main_palette['gray'],\n",
+    "    'background_gray': '#DDDDDD'\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Fig2c\n",
+    "fig4_subfigures['C'].subplots_adjust(left=0.12, bottom=0.25, right=0.95, top=0.8)\n",
+    "fig_4c_axes = fig4_subfigures['C'].subplots(ncols=3, sharey=True)\n",
+    "for ax, condition in zip(fig_4c_axes, ['fig4.uncoupled', 'fig4.fully-coupled', 'fig4.tangles-coupled']):\n",
+    "    df = fig4_examples[(fig4_examples.condition == condition) & (fig4_examples.temperature == 301.15)]\n",
+    "    idx = df.idx.unique()[1]\n",
+    "    if condition.endswith('tangles-coupled'):\n",
+    "        tangles_idx = idx\n",
+    "    sns.lineplot(data=df[df.idx == idx], x='time', y='her1_mRNA', ax=ax, color=fig4_palette['her1'])\n",
+    "    sns.lineplot(data=df[df.idx == idx], x='time', y='her7_mRNA', ax=ax, color=fig4_palette['her7'])\n",
+    "    sns.despine(ax=ax)\n",
+    "    ax.set_ylim([0, 80])\n",
+    "    ax.set_xlim([0, 30000])\n",
+    "    ax.set_xticks([0, 15000, 30000])\n",
+    "    ax.set_xlabel('')\n",
+    "    ax.set_ylabel('')\n",
+    "    ax.set_facecolor(fig4_palette[condition] + '55')\n",
+    "    for tick in ax.xaxis.get_major_ticks():\n",
+    "        tick.label1.set_horizontalalignment('right')\n",
+    "fig_4c_axes[0].set_ylabel('mRNA counts')\n",
+    "fig_4c_axes[1].set_xlabel('Time (s)')\n",
+    "fig_4c_axes[0].text(x=0.5, y=1.1, s='Uncoupled', horizontalalignment='center', transform=fig_4c_axes[0].transAxes)\n",
+    "fig_4c_axes[1].text(x=0.5, y=1.1, s='Transcript coupled', horizontalalignment='center', transform=fig_4c_axes[1].transAxes)\n",
+    "fig_4c_axes[2].text(x=0.5, y=1.1, s='Biophysical coupled', horizontalalignment='center', transform=fig_4c_axes[2].transAxes)\n",
+    "# Add inset axes\n",
+    "fig_4c_inset = fig_4c_axes[2].inset_axes([0.22, 0.78, 0.28, 0.28])\n",
+    "sns.lineplot(data=df[df.idx == tangles_idx], x='time', y='her1_mRNA',\n",
+    "    ax=fig_4c_inset, color=fig4_palette['her1'])\n",
+    "sns.lineplot(data=df[df.idx == tangles_idx], x='time', y='her7_mRNA',\n",
+    "    ax=fig_4c_inset, color=fig4_palette['her7'])\n",
+    "sns.despine(ax=fig_4c_inset)\n",
+    "fig_4c_inset.set_facecolor(fig4_palette['background_gray'])\n",
+    "fig_4c_inset.set_xlabel('')\n",
+    "fig_4c_inset.set_ylabel('')\n",
+    "fig_4c_inset.set_xticks([])\n",
+    "fig_4c_inset.set_yticks([])\n",
+    "fig4.savefig('test.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Fig2d\n",
+    "fig4_subfigures['D'].subplots_adjust(left=0.2, bottom=0.23, right=0.95, top=0.9)\n",
+    "fig_4d_ax = fig4_subfigures['D'].subplots(ncols=1)\n",
+    "sns.violinplot(data=fig4_df[fig4_df.temperature == 301.15],\n",
+    "    x='condition', y='spearman_corr', inner='quartile',\n",
+    "    palette=fig4_palette, saturation=0.7,\n",
+    "    bw=0.1, ax=fig_4d_ax)\n",
+    "fig_4d_ax.set_xlabel('')\n",
+    "fig_4d_ax.set_ylabel('Correlation\\ncoefficient')\n",
+    "fig_4d_ax.set_xticklabels(['Uncoupled','Transcript\\ncoupled','Biophysical\\ncoupled'])\n",
+    "sns.despine(ax=fig_4d_ax)\n",
+    "fig4.savefig('test.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare Fig4e\n",
+    "fig_4e_crosscorr = fig4_df.groupby(['condition', 'temperature']).apply(lambda df:np.vstack(df.cross_corr / df.autocorr_correction).mean(axis=0)).reset_index()\n",
+    "signal_length = sum(fig4_examples.time.unique() > 10000)\n",
+    "fig_4e_crosscorr.insert(2, 'time_delay', 6 * [scipy.signal.correlation_lags(signal_length, signal_length) * np.diff(fig4_examples.time.unique())[0]])\n",
+    "fig_4e_crosscorr = fig_4e_crosscorr.rename(columns={0:'cross_correlation'})\n",
+    "fig_4e_crosscorr = fig_4e_crosscorr.explode(['time_delay', 'cross_correlation'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Fig4e\n",
+    "fig4_subfigures['E'].subplots_adjust(left=0.2, bottom=0.23, right=0.95, top=0.9)\n",
+    "fig_4e_ax = fig4_subfigures['E'].subplots(ncols=1)\n",
+    "sns.lineplot(data=fig_4e_crosscorr[fig_4e_crosscorr.temperature == 301.15], x='time_delay', y='cross_correlation',\n",
+    "    hue='condition', palette=fig4_palette, ax=fig_4e_ax, estimator=None, legend=None)\n",
+    "sns.despine(ax=fig_4e_ax)\n",
+    "fig_4e_ax.set_ylim([-.3, 0.75])\n",
+    "fig_4e_ax.set_yticks(np.arange(-0.25, 1.0, 0.25))\n",
+    "fig_4e_ax.set_xlabel('Time delay (s)')\n",
+    "fig_4e_ax.set_ylabel('Cross-correlation')\n",
+    "fig_4e_ax.axhline(y=0, color='k')\n",
+    "fig_4e_ax.axvline(x=0, color='#888888', linestyle=':')\n",
+    "fig4.savefig('test.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig4.savefig('../writeups/figures/modeling_paper/fig_4_mpl.svg')"
    ]
   },
   {
